# listingpilot

./: .gitignore  CLAUDE.md  CREEM_GO_LIVE.md  CREEM_SETUP.md  DODOPAYMENTS_SETUP.md  run_backend.bat
.claude/: settings.local.json
backend/: .env.example  auth.py  database.py  main.py  prompts.py  pyproject.toml  requirements.txt
docs/: ListingPilot-项目总结.md
docs/superpowers/plans/: 2026-04-07-paypal-payment.md
docs/superpowers/specs/: 2026-04-07-paypal-payment-design.md
frontend/listing-pilot/: index.html  package-lock.json  package.json
frontend/listing-pilot/public/: privacy.html  terms.html
frontend/listing-pilot/src/: App.jsx
