[project]
name = "listingpilot-backend"
version = "0.3.0"
description = "ListingPilot — AI-powered e-commerce listing generator"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.0",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "pyjwt==2.9.0",
    "bcrypt==4.2.0",
]

[tool.uv]
